<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/cor_fundo"
    tools:context=".activity.CadastroActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/fiobrancoapp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/cadastro"
        android:textColor="@color/turquesa"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editCadastroNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/nome"
        android:background="@drawable/bg_edit_text"
        android:padding="16dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editCadastroTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:background="@drawable/bg_edit_text"
        android:padding="16dp"
        android:inputType="numberSigned" />


    <EditText
        android:id="@+id/editCadastroEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/email"
        android:background="@drawable/bg_edit_text"
        android:padding="16dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editCadastroSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="16dp" />

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button"
        android:padding="16dp"
        android:text="@string/cadastrar"
        android:textSize="16sp" />

</LinearLayout>

</ScrollView>