<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cor_fundo"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".activity.LoginActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/fiobrancoapp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/ola"
            android:textColor="@color/turquesa"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editLoginSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="16dp" />

        <Button
            android:id="@+id/buttonEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_button"
            android:padding="12dp"
            android:text="@string/entrar"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/turquesa" />

        <TextView
            android:id="@+id/textCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/cadastrar"
            android:textColor="@color/turquesa"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>