<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center|left"
        android:padding="16dp"
        tools:context=".fragments.PerfilFragment"
        tools:ignore="RtlHardcoded">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagePerfil"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="129dp"
            android:layout_marginLeft="129dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/perfil"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="2dp" />


        <TextView
            android:id="@+id/textNome"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/nome"
            android:textColor="@color/turquesa_mais_escuro"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="138dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/email"
            android:textColor="@color/turquesa_mais_escuro"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="194dp" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text=""
            android:textSize="18sp"
            tools:layout_editor_absoluteY="226dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/telefone"
            android:textColor="@color/turquesa_mais_escuro"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="274dp" />

        <TextView
            android:id="@+id/textTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text=""
            android:textSize="18sp"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="306dp" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/dataN"
            android:textColor="@color/turquesa_mais_escuro"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="354dp" />

        <TextView
            android:id="@+id/textData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="386dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/comorbidade"
            android:textColor="@color/turquesa_mais_escuro"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="354dp" />

        <TextView
            android:id="@+id/textComorbidades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="386dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/importante"
            android:textColor="@color/turquesa_mais_escuro"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="354dp" />

        <TextView
            android:id="@+id/textInformacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            tools:layout_editor_absoluteY="386dp" />

    </LinearLayout>

</ScrollView>